--- a/style.css
+++ b/style.css
@@ -1,21 +1,25 @@
 body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    background: #151515;
     overflow: hidden;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
-.title {
-    text-align: center;
-    font-size: 20px;
-    font-family: monospace;
-    white-space: pre;
-    color:#fff;
-    background: #151515;
+img {
+    position: fixed;
+    width: 15%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: drop-shadow(0 0 20px #000);
 }
 
-.dot {
+#canvas {
+    z-index: -1;
     position: absolute;
-    color: #fff;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #202025;
 }
